# poloniex-bot

./: .gitignore  Cargo.toml  README.md  included-symbols.txt
.github/workflows/: build.yml
ad-hoc-testing/: api.rest  moving-average.sql  order-book.json  shortlist.sql  volumes-24h.sql
ansible/: hosts  server.yml
ansible/group_vars/all/: vars.yml  vault.yml
ansible/roles/app/tasks/: main.yml
ansible/roles/app/templates/: poloniex-bot.service
ansible/roles/db/tasks/: main.yml
ansible/roles/db/templates/: env.j2
ansible/roles/server/handlers/: main.yml
ansible/roles/server/tasks/: main.yml
migrations/2021-11-08-150201_create_candles/: down.sql  up.sql
migrations/2022-01-12-152101_create_shortlist/: down.sql  up.sql
migrations/2022-02-16-170100_create_trade/: down.sql  up.sql
migrations/2022-02-16-170100_create_trades/: up.sql
src/: chart_data.rs  lib.rs  models.rs  order_book.rs  poloniex.rs  ride_the_wave.rs  schema.rs  shortlist.rs  shortlist_logic.rs  ticker.rs  trade.rs  trade_logic.rs
