[package]
name = "poloniex-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bigdecimal = "0.3.0"
chrono = "0.4.23"
diesel = { version = "2.0.2", features = ["postgres", "chrono"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
reqwest = { version = "0.11.13", features = ["blocking", "json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tungstenite = { version = "*", features = ["native-tls"] }
url = "2.3.1"
